objects/ASI_MFM_Sub_brand__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Allow_Back_Rebates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Back Rebates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Allow_Prompt_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Prompt Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_AntiCounterfeitInformation__c</fullName>
        <label>Anti-Counterfeit Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_BottleSize__c</fullName>
        <label>Bottle Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottle_Collection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bottle Collection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_CHI_NAME_C__c</fullName>
        <label>CN Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_COnvfactor_Ltocr12_C__c</fullName>
        <label>CR12 Conversion Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Cap_Jack_C__c</fullName>
        <label>Cap Jacket Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_CategoryName__c</fullName>
        <formula>ASI_MFM_Brand__r.ASI_HK_CRM_Product_Category__r.Name</formula>
        <label>CNCategoryName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Category__c</fullName>
        <formula>ASI_MFM_Brand__r.ASI_CRM_CN_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_QSS_C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QSS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_SUBBRAND_GROUP_C__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Brand Group</label>
        <referenceTo>ASI_CRM_Sub_brand_group__c</referenceTo>
        <relationshipLabel>Sub-brands</relationshipLabel>
        <relationshipName>Sub_brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Short_Name__c</fullName>
        <label>Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Standard_Bottle_Size__c</fullName>
        <label>Standard Bottle Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sub_brand_Grade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand Grade</label>
        <referenceTo>ASI_CRM_Sub_Brand_Grade__c</referenceTo>
        <relationshipLabel>Sub-brands</relationshipLabel>
        <relationshipName>Sub_brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Form_1_Input__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form 1 Input</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Central__c</fullName>
        <label>Incentive (Central)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_East__c</fullName>
        <label>Incentive (East)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_FC__c</fullName>
        <label>Incentive FC</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_North_West__c</fullName>
        <label>Incentive (North West)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_North__c</fullName>
        <label>Incentive (North)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_South_West__c</fullName>
        <label>Incentive (South West)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_West__c</fullName>
        <label>Incentive (West)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Key_Account_Brand__c</fullName>
        <formula>ASI_MFM_Brand__r.ASI_CRM_Key_Account_Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Account Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Knowledge__c</fullName>
        <label>Knowledge</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_LocalAntiCounterfeitInformation__c</fullName>
        <label>Local Anti-Counterfeit Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_LocalKnowledge__c</fullName>
        <label>Local Knowledge</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_LocalSubBrandDescription__c</fullName>
        <label>Local Sub-Brand Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MaxIncentive_FC__c</fullName>
        <label>MaxIncentive FC</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outlet Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product_Group_3__c</fullName>
        <label>Product Group 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product_Group_BMC__c</fullName>
        <label>Product Group BMC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Prompt_Payment_Rate__c</fullName>
        <label>Prompt Payment Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Representative_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Representative SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Sub-brands</relationshipLabel>
        <relationshipName>ASI_CRM_Sub_brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Budget_Net_Price__c</fullName>
        <label>Budget Net Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Brand_Grade_Sequence__c</fullName>
        <formula>ASI_CRM_CN_Sub_brand_Grade__r.ASI_CRM_CN_Sequence__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Brand Grade Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_CR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_CVS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CVS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Company__c</fullName>
        <label>Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PRT</fullName>
                </value>
                <value>
                    <fullName>Diageo</fullName>
                </value>
                <value>
                    <fullName>Matisse</fullName>
                </value>
                <value>
                    <fullName>Maxxium</fullName>
                </value>
                <value>
                    <fullName>WGS</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>Remy</fullName>
                </value>
                <value>
                    <fullName>Spey</fullName>
                </value>
                <value>
                    <fullName>Suntory</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>PRT_CVS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_HBR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HBR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_HYPER__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HYPER</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_LS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_SUPER__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SUPER</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Sequence_Company__c</fullName>
        <label>Sequence - Company</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Sequence_Sub_brand__c</fullName>
        <label>Sequence - Sub-brand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_TOT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TOT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Segment_Type__c</fullName>
        <label>Segment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ASI_CRM_VN_Segment_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_VideoPath__c</fullName>
        <label>Video Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WS Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Wine_Category_Group__c</fullName>
        <label>Wine Category Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wine</fullName>
                </value>
                <value>
                    <fullName>Champagne</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_FOC_ID_15__c</fullName>
        <formula>LEFT( Id , 15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID(15)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Is_Premium__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Premium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Benchmark__c</fullName>
        <label>Benchmark%</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Bottle_Size__c</fullName>
        <label>Bottle Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>PMO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_English_Name__c</fullName>
        <label>English Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Product_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>ASI_HK_CRM_Product_Category__c</referenceTo>
        <relationshipLabel>Sub-brands</relationshipLabel>
        <relationshipName>Sub_brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Product_Grade__c</fullName>
        <label>Product Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Super Premium</fullName>
                </value>
                <value>
                    <fullName>Deluxe</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_SYS_Brand_Type__c</fullName>
        <formula>IF( ISNULL(ASI_MFM_Brand__c), NULL
, IF( LOWER(ASI_MFM_Brand__r.ASI_MFM_Brand_Description__c) = &apos;absolut&apos;, &apos;absolut&apos;
, IF( LOWER(ASI_MFM_Brand__r.ASI_MFM_Brand_Description__c) = &apos;martell&apos;, &apos;martell&apos;
, IF( CONTAINS( LOWER(ASI_MFM_Brand__r.ASI_MFM_Brand_Description__c), &apos;chivas&apos; ), &apos;chivas&apos;
, IF( CONTAINS( LOWER(ASI_MFM_Brand__r.ASI_MFM_Brand_Description__c), &apos;glenlivet&apos; ), &apos;glenlivet&apos;
, IF( ISNULL(ASI_HK_CRM_Product_Category__c), NULL
  , IF( CONTAINS( &apos; &apos; &amp; LOWER(ASI_HK_CRM_Product_Category__r.ASI_HK_CRM_English_Name__c) &amp; &apos; &apos;, &apos; wine &apos; ), &apos;wine&apos;
  , IF( CONTAINS( &apos; &apos; &amp; LOWER(ASI_HK_CRM_Product_Category__r.ASI_HK_CRM_English_Name__c) &amp; &apos; &apos;, &apos; wines &apos; ), &apos;wine&apos;
, IF( LOWER(ASI_HK_CRM_Product_Category__r.ASI_HK_CRM_English_Name__c) = &apos;champagne&apos;, &apos;champagne&apos;
  , NULL
  )))
))))))</formula>
        <label>SYS_Brand_Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Std_Bottle_Size__c</fullName>
        <label>Std Bottle Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Sub_Brand__c</fullName>
        <externalId>true</externalId>
        <label>Sub Brand</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Active_for_CRM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active for CRM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Active_for_FOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active for FOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Active_for_MFM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active for MFM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Active_for_POSM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active for POSM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Brand_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CN_Sub_brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Brand_Group__c</fullName>
        <formula>SUBSTITUTE(ASI_MFM_Brand__r.ASI_CRM_CN_Brand_Group_c__r.Name,&quot;&apos;&quot;,&quot;-&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Brand_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sub_brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Brand_Marketing_Leader__c</fullName>
        <formula>ASI_MFM_Brand_Manager__r.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Marketing Leader</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>ASI_MFM_Brand__c</referenceTo>
        <relationshipLabel>Sub-brands</relationshipLabel>
        <relationshipName>Sub_brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Business_Unit__c</fullName>
        <formula>ASI_MFM_Company_Code__c +&apos;1P&apos;+ ASI_MFM_Sub_brand_Code__c +&apos;01&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Category_Code__c</fullName>
        <label>Category Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Category_Description__c</fullName>
        <label>Category Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Company_Code__c</fullName>
        <label>Company Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>will inactive to filter out for manage all</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_JP_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active (JP)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Media_Recipient_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Recipient 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sub_brandsKkdC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Media_Recipient_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Recipient 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sub_brands2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Media_Recipient_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Recipient 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sub_brands3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand_Code__c</fullName>
        <label>Sub-brand Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand_Description__c</fullName>
        <label>Sub-brand Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Sub-brand External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_TR_Rec_Type__c</fullName>
        <description>The value is only allow:
PRADF 
PRJDF</description>
        <label>TR Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Has_Budget_Volume_Setup__c</fullName>
        <label>Has Budget Volume Setup</label>
        <summaryFilterItems>
            <field>ASI_NPP_Budget_Volume__c.ASI_NPP_Inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_NPP_Budget_Volume__c.ASI_NPP_Sub_Brand__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Brand_Code__c</fullName>
        <formula>ASI_MFM_Brand__r.ASI_MFM_Brand_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>ASI_TH_CRM_Category__c</referenceTo>
        <relationshipLabel>Sub-brands</relationshipLabel>
        <relationshipName>Sub_brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Pack_Size__c</fullName>
        <label>Pack Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Price__c</fullName>
        <label>FOC Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Product_Group_1__c</fullName>
        <label>Product Group 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Product_Group_2__c</fullName>
        <label>Product Group 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment</label>
        <referenceTo>ASI_TH_CRM_Segment__c</referenceTo>
        <relationshipLabel>Sub-brands</relationshipLabel>
        <relationshipName>Sub_brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Sub_category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-category</label>
        <referenceTo>ASI_TH_CRM_Sub_category__c</referenceTo>
        <relationshipLabel>Sub-brands</relationshipLabel>
        <relationshipName>Sub_brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sub-brand</label>
    <listViews>
        <fullName>ASI_CRM_JP_All_Sub_brands</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Sub_brand_Code__c</columns>
        <columns>ASI_MFM_Sub_brand_Description__c</columns>
        <columns>ASI_MFM_Brand__c</columns>
        <columns>ASI_HK_CRM_Product_Grade__c</columns>
        <columns>ASI_MFM_Category_Code__c</columns>
        <columns>ASI_MFM_Category_Description__c</columns>
        <columns>ASI_MFM_Active_for_CRM__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Sub_brand__c.ASI_CRM_JP_Sub_brand</value>
        </filters>
        <label>All JP CRM Sub-brands</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_Sub_Brands</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Sub_brand_Code__c</columns>
        <columns>ASI_MFM_Brand__c</columns>
        <columns>ASI_TH_CRM_Brand_Code__c</columns>
        <columns>ASI_HK_CRM_Product_Category__c</columns>
        <columns>ASI_TH_CRM_Sub_category__c</columns>
        <columns>ASI_CRM_TW_Company__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_CRM_TW_Sequence_Sub_brand__c</columns>
        <columns>ASI_CRM_TW_LS__c</columns>
        <columns>ASI_CRM_TW_HBR__c</columns>
        <columns>ASI_CRM_TW_TOT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Sub_brand__c.ASI_MFM_TW_Sub_brand</value>
        </filters>
        <filters>
            <field>ASI_CRM_TW_Company__c</field>
            <operation>equals</operation>
            <value>PRT</value>
        </filters>
        <label>TW Sub-Brands</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TH_CRM_Sub_Brand</fullName>
        <columns>ASI_MFM_Sub_brand_Code__c</columns>
        <columns>NAME</columns>
        <columns>ASI_MFM_Sub_brand_Description__c</columns>
        <columns>ASI_TH_CRM_Brand_Code__c</columns>
        <columns>ASI_MFM_Brand__c</columns>
        <columns>ASI_HK_CRM_Bottle_Size__c</columns>
        <columns>ASI_TH_CRM_Pack_Size__c</columns>
        <columns>ASI_TH_CRM_Product_Group_1__c</columns>
        <columns>ASI_TH_CRM_Price__c</columns>
        <columns>ASI_TH_CRM_Active__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_HK_CRM_Product_Category__c</columns>
        <columns>ASI_TH_CRM_Category__c</columns>
        <columns>ASI_TH_CRM_Sub_category__c</columns>
        <columns>ASI_TH_CRM_Segment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Sub_brand__c.ASI_TH_CRM_Sub_brand</value>
        </filters>
        <label>All TH Sub-Brand</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TH_CRM_Sub_Brand_PRTActive</fullName>
        <columns>ASI_MFM_Sub_brand_Code__c</columns>
        <columns>NAME</columns>
        <columns>ASI_MFM_Sub_brand_Description__c</columns>
        <columns>ASI_TH_CRM_Brand_Code__c</columns>
        <columns>ASI_MFM_Brand__c</columns>
        <columns>ASI_MFM_Sub_brand_External_ID__c</columns>
        <columns>ASI_HK_CRM_Bottle_Size__c</columns>
        <columns>ASI_TH_CRM_Pack_Size__c</columns>
        <columns>ASI_TH_CRM_Product_Group_1__c</columns>
        <columns>ASI_TH_CRM_Price__c</columns>
        <columns>ASI_TH_CRM_Active__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_TH_CRM_Category__c</columns>
        <columns>ASI_TH_CRM_Sub_category__c</columns>
        <columns>ASI_TH_CRM_Segment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Sub_brand__c.ASI_TH_CRM_Sub_brand</value>
        </filters>
        <filters>
            <field>ASI_TH_CRM_Product_Group_1__c</field>
            <operation>notEqual</operation>
            <value>Competitor</value>
        </filters>
        <filters>
            <field>ASI_TH_CRM_Active__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>All TH Sub-Brand - PRT Active</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_ID_All_Sub_brands</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Sub_brand_Code__c</columns>
        <columns>ASI_MFM_Sub_brand_Description__c</columns>
        <columns>ASI_MFM_Brand__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Sub_brand__c.ASI_TnE_ID_Sub_brand</value>
        </filters>
        <label>All ID TnE Sub-brands</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_ID_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_MY_All_Sub_brands</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Sub_brand_Code__c</columns>
        <columns>ASI_MFM_Sub_brand_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Sub_brand__c.ASI_TnE_MY_Sub_brand</value>
        </filters>
        <label>All MY TnE Sub-brands</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_MY_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_PH_All_Sub_brands</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Sub_brand_Code__c</columns>
        <columns>ASI_MFM_Sub_brand_Description__c</columns>
        <columns>ASI_MFM_Brand__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Sub_brand__c.ASI_TnE_PH_Sub_brand</value>
        </filters>
        <label>All PH TnE Sub-brands</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_PH_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_SG_All_Sub_brands</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Sub_brand_Code__c</columns>
        <columns>ASI_MFM_Sub_brand_Description__c</columns>
        <columns>ASI_MFM_Brand__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Sub_brand__c.ASI_TnE_SG_Sub_brand</value>
        </filters>
        <label>All SG TnE Sub-brands</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_SG_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_TH_All_Sub_brands</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Sub_brand_Code__c</columns>
        <columns>ASI_MFM_Sub_brand_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>012D00000007Pk4</value>
        </filters>
        <label>All TH TnE Sub-brands</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_TH_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ATR_Sub_Brand</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Sub_brand_Description__c</columns>
        <columns>ASI_MFM_Brand__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_MFM_Active_for_CRM__c</columns>
        <columns>ASI_MFM_Active_for_FOC__c</columns>
        <columns>ASI_MFM_Active_for_MFM__c</columns>
        <columns>ASI_MFM_Sub_brand_External_ID__c</columns>
        <columns>ASI_MFM_Sub_brand_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Sub_brand__c.ASI_MFM_TR_Sub_brand</value>
        </filters>
        <label>ATR Sub-Brand</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_DFPM_Pernod_Ricard_Asia_Duty_Free</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Sub_brand_Description__c</columns>
        <columns>ASI_MFM_Brand__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_HK_CRM_Product_Category__c</columns>
        <columns>ASI_MFM_Sub_brand_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>